clusters/openshift/apps/utility/convertx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convertx-route
  namespace: convertx
  labels:
    external-dns: 'true'
  annotations:
    external-dns.alpha.kubernetes.io/target: vanillax.xyz
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
    sectionName: https
  hostnames:
  - convertx.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: convertx
      port: 3000
      weight: 1
